# transient

./: Makefile  README.md  pyproject.toml
app/: __init__.py  audio.py  cli.py  main.py
static/: styles.css
templates/: index.html
