[project]
name = "transient"
version = "0.1.0"
description = "Web app for slicing uploaded audio files around transients."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[project.scripts]
transient = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/static" = "app/static"
"app/templates" = "app/templates"

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/Makefile",
    "/README.md",
    "/pyproject.toml",
]
